add global env for argo-cd
Signed-off-by: Joe Lee <lj_2005@163.com>

--- a/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-applicationset/deployment.yaml
@@ -79,7 +79,7 @@ spec:
               {{- toYaml . | nindent 12 }}
             {{- end }}
           env:
-            {{- with .Values.applicationSet.extraEnv }}
+            {{- with (concat .Values.global.env .Values.applicationSet.extraEnv) }}
               {{- toYaml . | nindent 12 }}
             {{- end }}
             - name: NAMESPACE
