--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -144,6 +144,9 @@ global:
     #   maxSurge: 25%
     #   maxUnavailable: 25%
 
+  # -- Environment variables to pass to all deployed Deployments
+  env: []
+
 ## Argo Configs
 configs:
   # General Argo CD configuration
