feat(argo-workflows): Add support for UI columns configuration
Signed-off-by: Simon Hewitt <simon@archera.ai>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -305,6 +305,9 @@ controller:
   # -- Configure Argo Server to show custom [links]
   ## Ref: https://argoproj.github.io/argo-workflows/links/
   links: []
+  # -- Configure Argo Server to show custom [columns]
+  ## Ref: https://github.com/argoproj/argo-workflows/pull/10693
+  columns: []
   # -- Set ui navigation bar background color
   navColor: ""
   clusterWorkflowTemplates:
