--- a/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
+++ b/charts/argo-workflows/templates/controller/workflow-controller-config-map.yaml
@@ -163,6 +163,9 @@ data:
     {{- with .Values.controller.links }}
     links: {{- toYaml . | nindent 6 }}
     {{- end }}
+    {{- with .Values.controller.columns }}
+    columns: {{- toYaml . | nindent 6 }}
+    {{- end }}
     {{- with .Values.controller.navColor }}
     navColor: {{ . }}
     {{- end }}
