--- a/.github/configs/cr.yaml
+++ b/.github/configs/cr.yaml
@@ -6,3 +6,7 @@ sign: true
 key: Argo Helm maintainers
 # keyring:          # Set via env variable CR_KEYRING
 # passphrase-file:  # Set via env variable CR_PASSPHRASE_FILE
+
+# Enable automatic generation of release notes using GitHubs release notes generator.
+# see: https://docs.github.com/en/repositories/releasing-projects-on-github/automatically-generated-release-notes
+generate-release-notes: true
