--- a/charts/argo-events/templates/argo-events-controller/deployment.yaml
+++ b/charts/argo-events/templates/argo-events-controller/deployment.yaml
@@ -48,6 +48,10 @@ spec:
         {{- if .Values.controller.rbac.namespaced }}
         - --namespaced
         {{- end }}
+        {{- if .Values.controller.rbac.managedNamespace }}
+        - --managed-namespace
+        - {{ .Values.controller.rbac.managedNamespace }}
+        {{- end }}
         {{- with .Values.controller.containerSecurityContext }}
         securityContext:
           {{- toYaml . | nindent 10 }}
