--- a/charts/argo-events/Chart.yaml
+++ b/charts/argo-events/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-appVersion: v1.7.6
+appVersion: v1.8.0
 description: A Helm chart for Argo Events, the event-driven workflow automation framework
 name: argo-events
-version: 2.3.3
+version: 2.4.0
 home: https://github.com/argoproj/argo-helm
 icon: https://avatars.githubusercontent.com/u/30269780?s=200&v=4
 keywords:
@@ -18,5 +18,7 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
+    - kind: changed
+      description: Upgrade Argo Events to v1.8.0
     - kind: added
-      description: Introduce chart signing
+      description: Add managed namespace configuration
