fix(argo-workflows): Configure artifactRepository explicitly
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -701,6 +701,8 @@ extraObjects: []
 # -- Use static credentials for S3 (eg. when not using AWS IRSA)
 useStaticCredentials: true
 artifactRepository:
+  # -- Enables artifactRepository
+  enabled: false
   # -- Archive the main container logs as an artifact
   archiveLogs: false
   # -- Store artifact in a S3-compliant object store
