--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -1,9 +1,10 @@
 apiVersion: v2
 appVersion: v3.4.8
+kubeVersion: ">=1.23.0-0"
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.30.0
+version: 0.31.0
 icon: https://argoproj.github.io/argo-workflows/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -16,5 +17,5 @@ annotations:
     fingerprint: 2B8F22F57260EFA67BE1C5824B11F800CD9D2252
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
-    - kind: fixed
-      description: artifactRepository will not be configured by default
+    - kind: added
+      description: Define supported Kubernetes version
