fix(certificate) Add usages to ArgoCD server certificate
Signed-off-by: Elad Shmitanka <elad@myheritage.com>

--- a/charts/argo-cd/templates/argocd-server/certificate.yaml
+++ b/charts/argo-cd/templates/argocd-server/certificate.yaml
@@ -30,4 +30,10 @@ spec:
   privateKey:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+  {{- if .Values.server.certificate.usages }}
+  usages:
+    {{- range .Values.server.certificate.usages }}
+    - {{ . | quote }}
+    {{- end }}
+  {{- end }}
 {{- end }}
