fix(argo-cd) Add helm chart annotation
Signed-off-by: Elad Shmitanka <elad@myheritage.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: added
-      description: Added note about Kubernetes Compatibility Matrix
+      description: Support for setting server certificate usages
