fix(argo-cd) Shorten if clause for certificate
Signed-off-by: Elad Shmitanka <elad@myheritage.com>

--- a/charts/argo-cd/templates/argocd-server/certificate.yaml
+++ b/charts/argo-cd/templates/argocd-server/certificate.yaml
@@ -30,10 +30,8 @@ spec:
   privateKey:
     {{- toYaml . | nindent 4 }}
   {{- end }}
-  {{- if .Values.server.certificate.usages }}
+  {{- with .Values.server.certificate.usages }}
   usages:
-    {{- range .Values.server.certificate.usages }}
-    - {{ . | quote }}
-    {{- end }}
+    {{- toYaml . | nindent 4 }}
   {{- end }}
 {{- end }}
