feat(argocd-apps): Add permitOnlyProjectScopedClustersFlag
  # Context

  This flag was added in this PR https://github.com/argoproj/argo-cd/pull/10237/files but is not possible to set it using the argocd-apps chart.

  # What it does this PR

  - It adds this flag as a value of the chart for projects in
    argocd-apps

  # Proof

```
echo "projects:                                                                                                                                                                                                                                                         (⎈ |kind-hnc:hnc-system)
  - name: orka-extensibility
    namespace: cre-system
    description: orka-extensibility
    clusterResourceWhitelist:
    - group: '*'
      kind: '*'
    destinations:
    - namespace: '*'
      server: '*'
    orphanedResources:
      warn: true
    sourceRepos:
    - '*'
    roles:
    # A role which provides read-only access to all applications in the project
    - name: read-only
      description: Read-only privileges to orka-extensibility
      policies:
      - p, proj:orka-extensibility:read-only, applications, get, orka-extensibility/*, allow
      - p, proj:orka-extensibility:read-only, applicationsets, get, orka-extensibility/*, allow
      - p, proj:orka-extensibility:read-only, applications, sync, orka-extensibility/*, allow
      - p, proj:orka-extensibility:read-only, applicationsets, sync, orka-extensibility/*, allow
      groups:
      - OrkA Team
" > values-test.yaml

helm template . -f values-test.yaml

---
apiVersion: argoproj.io/v1alpha1
kind: AppProject
metadata:
  name: orka-extensibility
  namespace: cre-system
spec:
  permitOnlyProjectScopedClusters: false
  description: orka-extensibility
  sourceRepos:
    - '*'
  destinations:
    - namespace: '*'
      server: '*'
  clusterResourceWhitelist:
    - group: '*'
      kind: '*'
  orphanedResources:
    warn: true
  roles:
    - description: Read-only privileges to orka-ext

--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -48,6 +48,7 @@ projects: []
 #   namespace: argocd
 #   additionalLabels: {}
 #   additionalAnnotations: {}
+#   permitOnlyProjectScopedClusters: false
 #   finalizers:
 #   - resources-finalizer.argocd.argoproj.io
 #   description: Example Project
