--- a/charts/argocd-apps/templates/projects.yaml
+++ b/charts/argocd-apps/templates/projects.yaml
@@ -22,6 +22,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
+  permitOnlyProjectScopedClusters: {{ .permitOnlyProjectScopedClusters | default false }}
   description: {{ .description }}
   {{- with .sourceRepos }}
   sourceRepos:
