--- a/.github/workflows/copy-redis-image.yml
+++ b/.github/workflows/copy-redis-image.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Extract Redis Image Tag from values.yaml
         id: get_redis_image_tag
         run: |
-          echo "VERSION=$(yq e .redis.image.tag ../../charts/argo-cd/values.yaml)" >> $GITHUB_ENV
+          echo "VERSION=$(yq e .redis.image.tag charts/argo-cd/values.yaml)" >> $GITHUB_ENV
 
       - name: Login to Quay
         uses: docker/login-action@v1
@@ -36,4 +36,4 @@ jobs:
           SRC_IMAGE_REPO: public.ecr.aws/docker/library/redis
           DST_IMAGE_REPO: quay.io/codefresh/redis-test
         run: |
-          regctl image copy "${{ env.SRC_IMAGE_REPO }}":"${{ env.VERSION }}" "${{ env.DST_IMAGE_REPO }}":"${{ env.VERSION }}" --verbosity debug
+          regctl image copy ${{ env.SRC_IMAGE_REPO }}:${{ env.VERSION }} ${{ env.DST_IMAGE_REPO }}:${{ env.VERSION }} --verbosity debug
