--- a/charts/argocd-apps/templates/projects.yaml
+++ b/charts/argocd-apps/templates/projects.yaml
@@ -22,7 +22,9 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  permitOnlyProjectScopedClusters: {{ .permitOnlyProjectScopedClusters | default false }}
+  {{- with .permitOnlyProjectScopedClusters }}
+  permitOnlyProjectScopedClusters: {{ . }}
+  {{- end }}
   description: {{ .description }}
   {{- with .sourceRepos }}
   sourceRepos:
