--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2703,6 +2703,9 @@ notifications:
   # -- Enable notifications controller
   enabled: true
 
+  # -- The number of Notifications controller pods to run
+  replicaCount: 1
+
   # -- Notifications controller name string
   name: notifications-controller
 
