Fix values/readme reference to repo server
Signed-off-by: Zach Swanson <zswanson@wayfair.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -2046,7 +2046,7 @@ repoServer:
       #   - type: Pods
       #     value: 2
       #     periodSeconds: 60
-    # -- Configures custom HPA metrics for the Argo CD server
+    # -- Configures custom HPA metrics for the Argo CD repo server
     # Ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/
     metrics: []
 
