feat(argo-cd): allow configurable hpa metrics (#2166)
* allow configurable HPA metrics

Signed-off-by: Zach Swanson <zswanson@wayfair.com>

* update docs

Signed-off-by: Zach Swanson <zswanson@wayfair.com>

* Update chart version and changelog

Signed-off-by: Zach Swanson <zach.swanson@gmail.com>
Signed-off-by: Zach Swanson <zswanson@wayfair.com>

* Fix values/readme reference to repo server

Signed-off-by: Zach Swanson <zswanson@wayfair.com>

---------

Signed-off-by: Zach Swanson <zswanson@wayfair.com>
Signed-off-by: Zach Swanson <zach.swanson@gmail.com>
Signed-off-by: Zach Swanson <1272954+zswanson@users.noreply.github.com>

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -1476,6 +1476,9 @@ server:
       #   - type: Pods
       #     value: 2
       #     periodSeconds: 60
+    # -- Configures custom HPA metrics for the Argo CD server
+    # Ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/
+    metrics: []
 
   ## Argo CD server Pod Disruption Budget
   ## Ref: https://kubernetes.io/docs/tasks/run-application/configure-pdb/
@@ -2043,6 +2046,9 @@ repoServer:
       #   - type: Pods
       #     value: 2
       #     periodSeconds: 60
+    # -- Configures custom HPA metrics for the Argo CD repo server
+    # Ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/
+    metrics: []
 
   ## Repo server Pod Disruption Budget
   ## Ref: https://kubernetes.io/docs/tasks/run-application/configure-pdb/
