feat(argocd-apps): syncOptions for applications
Signed-off-by: Mathieu Parent <mathieu.parent@insee.fr>

--- a/charts/argocd-apps/templates/applications.yaml
+++ b/charts/argocd-apps/templates/applications.yaml
@@ -37,6 +37,10 @@ spec:
   syncPolicy:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+  {{- with .syncOptions }}
+  syncOptions:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   {{- with .revisionHistoryLimit }}
   revisionHistoryLimit: {{ . }}
   {{- end }}
