--- a/charts/argocd-apps/values.yaml
+++ b/charts/argocd-apps/values.yaml
@@ -30,6 +30,8 @@ applications: []
 #     automated:
 #       prune: false
 #       selfHeal: false
+#   syncOptions:
+#   - CreateNamespace=true
 #   revisionHistoryLimit: null
 #   ignoreDifferences:
 #   - group: apps
