feat(argo-workflows): allow setting executor args
Signed-off-by: Andy Cobaugh <andrew.cobaugh@gmail.com>

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -382,6 +382,8 @@ executor:
     pullPolicy: ""
   # -- Resource limits and requests for the Workflow Executors
   resources: {}
+  # -- Passes arguments to the executor processes
+  args: []
   # -- Adds environment variables for the executor.
   env: []
   # -- sets security context for the executor container
