feat(argo-workflows): add a sample HA config
- a `values-ha.yaml` as an example for how one would set-up HA according to the Argo Workflows docs

Signed-off-by: Anton Gilgur <agilgur5@gmail.com>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: v3.4.9
 name: argo-workflows
 description: A Helm chart for Argo Workflows
 type: application
-version: 0.32.1
+version: 0.33.0
 icon: https://argoproj.github.io/argo-workflows/assets/logo.png
 home: https://github.com/argoproj/argo-helm
 sources:
@@ -17,4 +17,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: added
-      description: Add support for executor args
+      description: Add a sample HA config
