--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -750,7 +750,7 @@ artifactRepository:
   azure: {}
   # endpoint: https://mystorageaccountname.blob.core.windows.net
   # container: my-container-name
-  # blob: path/in/container
+  # blobNameFormat: path/in/container
   ## accountKeySecret is a secret selector.
   ## It references the k8s secret named 'my-azure-storage-credentials'.
   ## This secret is expected to have have the key 'account-access-key',
