fix(argo-workflows): add ssl entries in values.yaml

--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -149,6 +149,8 @@ controller:
   #   port: 5432
   #   database: postgres
   #   tableName: argo_workflows
+  #   ssl: false
+  #   sslMode: prefer
   #   # the database secrets must be in the same namespace of the controller
   #   userNameSecret:
   #     name: argo-postgres-config
