--- a/charts/argo-workflows/templates/crds/argoproj.io_workflowtaskresults.yaml
+++ b/charts/argo-workflows/templates/crds/argoproj.io_workflowtaskresults.yaml
@@ -116,7 +116,7 @@ spec:
                           required:
                           - key
                           type: object
-                        blob:
+                        blobNameFormat:
                           type: string
                         container:
                           type: string
