added change log
Signed-off-by: Jeongwon Song <jeongwon412@gmail.com>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -18,3 +18,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: added
       description: add imagePullSecret for workflow sa
+    - kind: updated 
+      description: updated azure blob to blobNameFormat
