--- a/charts/argo-workflows/templates/crds/argoproj.io_workflowtaskresults.yaml
+++ b/charts/argo-workflows/templates/crds/argoproj.io_workflowtaskresults.yaml
@@ -116,7 +116,7 @@ spec:
                           required:
                           - key
                           type: object
-                        blobNameFormat:
+                        blob:
                           type: string
                         container:
                           type: string
@@ -125,7 +125,7 @@ spec:
                         useSDKCreds:
                           type: boolean
                       required:
-                      - blobNameFormat
+                      - blob
                       - container
                       - endpoint
                       type: object
