updated change log
Signed-off-by: Jeongwon Song <jeongwon412@gmail.com>

--- a/charts/argo-workflows/Chart.yaml
+++ b/charts/argo-workflows/Chart.yaml
@@ -19,4 +19,4 @@ annotations:
     - kind: added
       description: add imagePullSecret for workflow sa
     - kind: updated 
-      description: updated azure blob to blobNameFormat
+      description: fixed comment in values.yaml for blobNameFormat field
