argo-events v1.7.3-cap-CR-19893

--- a/charts/argo-events/Chart.yaml
+++ b/charts/argo-events/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-appVersion: v1.7.2-cap-CR-14600
+appVersion: v1.7.3-cap-CR-19893
 description: A Helm chart for Argo Events, the event-driven workflow automation framework
 name: argo-events
-version: 2.0.5-1-cf-init
+version: 2.0.5-2-cap-CR-19893
 home: https://github.com/argoproj/argo-helm
 icon: https://argoproj.github.io/argo-events/assets/logo.png
 keywords:
