chore(argo-cd): Upgrade Argo CD to v2.8.4
Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-cd/templates/argocd-server/clusterrole.yaml
+++ b/charts/argo-cd/templates/argocd-server/clusterrole.yaml
@@ -48,6 +48,7 @@ rules:
   - apiGroups:
       - batch
     resources:
+      {{/* supports triggering jobs from UI */}}
       - jobs
     verbs:
       - create
@@ -56,5 +57,6 @@ rules:
     resources:
       - workflows
     verbs:
+      {{/* supports triggering workflows from UI */}}
       - create
 {{- end }}
